2017-20-12	Håvard <cerebrum@cleomedes.uit.no>

        * bofhd_uit_cmds.py: Added user_history_filtered command from our old fork.

2017-10-02    <cerebrum@cleomedes.uit.no>

	* Constants.py (Constants): added constant to identify new students

2017-09-20  Karen   <cerebrum@metius.uit.no>

    * cim_datasource.py (create_dist_lists): Minor tidy-up of how things are logged when location info is missing or unrecognized.

2017-09-19    <cerebrum@cleomedes.uit.no>

	* Constants.py (Constants): added trait for primary accounts. used
	by brukerinfo

2017-09-15  Karen   <cerebrum@metius.uit.no>

    * cim_datasource.py: Comparison of words that contain norwegian letters should now be correct.

2017-08-07  Karen   <cerebrum@metius.uit.no>

    * Constants.py: Updated affiliation_status_timelonnet_fast and affiliation_status_timelonnet_midlertidig
    so that they don't have norwegian character in their status string.

2017-07-20    <cerebrum@cleomedes.uit.no-cleomedes>

	* Stedkode.py (StedkodeMixin.find_by_perspective_old): Added try/catch functionality to make the program finish even if some names are missing

2017-07-18  Karen   <cerebrum@metius.uit.no>

    * Constants.py: Added affiliation_status_timelonnet_fast and affiliation_status_timelonnet_midlertidig.

2017-07-18    <cerebrum@cleomedes.uit.no-cleomedes>

	* Account.py: create date has been removed from account_info. it is now found in the entity_info table as created_at. sql in list_all() has been changed to reflect this change

2017-06-12  Karen   <cerebrum@metius.uit.no>

    * cim_datasource.py: Adding dist_list stuff. WORK IN PROGRESS.

2017-04-26    <cerebrum@cleomedes.uit.no-cleomedes>

	* Account.py (AccountUiTMixin.verify_password): updated verify_password to include b64 encoded md5 crypts

2017-04-03    <cerebrum@cleomedes.uit.no-cleomedes>

	* bofhd_uit_cmds.py: replaced uit version with uio version. this
	because sertain uio bofhd commands have uio constants defined in